FrontEnd Store Page - adapting the functions to new Layout

--- a/ecommerce/store/templates/store.html
+++ b/ecommerce/store/templates/store.html
@@ -7,30 +7,6 @@
 
 <div style="display:flex">
 
-    <form method="post" action="">
-        {% csrf_token %}
-        
-        <p>Price</p>
-            <input type="number" name="minimum_price" value="{{ minimum_price }}" step="0.1">
-            <input type="number" name="maximum_price" value="{{ maximum_price }}" step="0.1">
-
-        <p>Size</p>
-            {% for size in sizes %}
-                <input type="radio" name="size" value="{{ size }}">
-                <label for="{{ size }}">{{ size }}</label> 
-            {% endfor %}
-
-        <p>Type</p>
-            {% for type in all_type %}
-                <input type="radio" name="type" value="{{ type.slug }}">
-                <label for="{{ type.slug }}">{{ type.name }}</label> 
-            {% endfor %}
-
-        
-        <button type="submit">Apply Filters</button>
-
-    </form>
-
     <div>
         Order by:
         <ul>
@@ -51,5 +27,386 @@
     </div>
 
 </div>
+
+
+<main class="principal principal--padding-b">
+    <section class="loja">
+
+        <form class="menu" method="post" action="">
+            {% csrf_token %}
+
+            <div class="menu__cabecalho">
+                <div class="menu__titulos">
+                    <div>
+                        <img
+                        class="menu__icone"
+                        src="{% static 'images/filter-big-1-svgrepo-com.svg' %}"
+                        alt="Ícone filtrar"
+                        />
+                    </div>
+                    <p class="menu__titulo">Filter</p>
+                </div>
+
+                <p class="menu__fechar-filtro">X</p>
+
+            </div>
+
+            <div class="menu__preco">
+                <p class="menu__subtitulo">Price Range</p>
+
+                <div class="range_container">
+                    <div class="sliders_control">
+                        <input
+                        id="fromSlider"
+                        type="range"
+                        name="minimum_price"
+                        value="{{ minimum_price }}"
+                        min="{{ minimum_price }}"
+                        max="{{ maximum_price }}"
+                        />
+                        <input
+                        id="toSlider"
+                        type="range"
+                        name="maximum_price"
+                        value="{{ maximum_price }}"
+                        min="{{ minimum_price }}"
+                        max="{{ maximum_price }}"
+                        />
+                    </div>
+
+                    <div class="menu__controles">
+                        <div class="form_control">
+                            <div class="form_control_container">
+                                <input
+                                class="form_control_container__time__input"
+                                type="number"
+                                id="fromInput"
+                                name="minimum_price"
+                                value="{{ minimum_price }}"
+                                min="{{ minimum_price }}"
+                                max="{{ maximum_price }}"
+                                />
+                            </div>
+
+                            <p>BIS</p>
+
+                            <div class="form_control_container">
+                                <input
+                                class="form_control_container__time__input"
+                                type="number"
+                                id="toInput"
+                                name="maximum_price"
+                                value="{{ maximum_price }}"
+                                min="{{ minimum_price }}"
+                                max="{{ maximum_price }}"
+                                />
+                            </div>
+
+                        </div>
+
+                        <button class="menu__botao">Filter</button>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu__expansivel">
+
+                <div class="menu__expansivel-cabecalho menu__expansivel-cabecalho--aberto">
+                    <p class="menu__subtitulo">Size</p>
+                </div>
+
+                <div class="menu__expansivel-conteudo">
+                    <div class="menu__tamanhos">
+
+                        {% for size in sizes %}
+                            <div class="menu__tamanho">
+                                <div class="menu__tamanho-quadrado">{{ size }}</div>
+                                <input
+                                    class="menu__checkbox"
+                                    type="radio"
+                                    name="size"
+                                    value="{{ size }}"
+                                />
+                            </div>
+                        {% endfor %}
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu__expansivel">
+                <div class="menu__expansivel-cabecalho menu__expansivel-cabecalho--aberto">
+                    <p class="menu__subtitulo">Type</p>
+                </div>
+
+                <div class="menu__expansivel-conteudo">
+                    <div class="menu__categorias">
+
+                        {% for type in all_type %}
+                            <div class="menu__categoria">
+                                <div class="menu__categoria-quadrado"></div>
+                                <div class="menu__categoria-texto">{{ type.name }}</div>
+                                <input
+                                    class="menu__checkbox"
+                                    type="radio"
+                                    name="type"
+                                    value="{{ type.slug }}"
+                                />
+                            </div>
+                        {% endfor %}
+
+                    </div>
+                </div>
+            </div>
+        </form>
+
+
+        <div class="produtos">
+            <div class="produtos__cabecalho">
+              <button class="produtos__cabecalho-filtrar">Filtrar</button>
+  
+              <div class="produtos__cabecalho-ordenarpor">
+                <div class="produtos__cabecalho-imgicone">
+                  <img
+                    class="produtos__cabecalho-icone"
+                    src="Imagens/sort-vertical-svgrepo-com.svg"
+                    alt=""
+                  />
+                </div>
+                <p class="produtos__subtitulo">Ordenar por:</p>
+                <select class="produtos__select">
+                  <option value="maior-preco">Maior preço</option>
+                  <option value="menor-preco">Menor preço</option>
+                </select>
+              </div>
+  
+              <p class="produtos__cabecalho-textoitens">
+                Mostrando
+                <span class="produtos__cabecalho-itens">24 de 104 itens</span>
+              </p>
+            </div>
+  
+            <div class="produtos__grade">
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+  
+              <a
+                href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434"
+                class="produto"
+              >
+                <div class="produto__imagem">
+                  <img
+                    src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true"
+                    alt="Imagem do Produto"
+                  />
+                  <form
+                    class="produto__botao"
+                    action="{% url 'adicionar_carrinho' produto.id %}"
+                    method="post"
+                  >
+                    <button>Adicionar ao Carrinho</button>
+                  </form>
+                </div>
+  
+                <div class="produto__textos">
+                  <p class="produto__titulo">Camiseta Silk Folhagem</p>
+                  <div class="produto__preco">
+                    <p class="produto__avista">R$ 349<sup>,00</sup></p>
+                    <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+    </section>
+</main>
 
 {% endblock %}
