--- a/ecommerce/store/templates/homepage.html
+++ b/ecommerce/store/templates/homepage.html
@@ -4,12 +4,23 @@
 
 {% block body %}
 
-<h3> HOME PAGE</h3>
+<main class="principal">
 
-{% for banner in banners %}
-    <a href="{% url 'store' %}{{banner.link}}">
-        <img src="{{ banner.image.url }}">
-    </a>
-{% endfor %}
+    <section class="banner-grid">
+        {% for banner in banners %}
+        <a
+            href="{% url 'store' %}{{banner.link}}"
+            class="banner-grid__imagem"
+            >
+            <img
+                src="{{ banner.image.url }}"
+                alt={{banner.link}}
+            />
+        </a>
+        {% endfor %}
+
+    </section>
+
+</main>
 
 {% endblock %}
