FrontEnd Product Description DONE

--- a/ecommerce/store/templates/product_description.html
+++ b/ecommerce/store/templates/product_description.html
@@ -3,43 +3,140 @@
 
 {% block body %}
 
-<h3> {{ product.name }}</h3>
+<main class="principal principal--padding-b principal--gap">
+    <section class="s-produto">
+        <div class="s-produto__carrossel">
+            <div class="s-produto__carrossel-itens">
 
-{% if in_stock %}
-    
-    <img src="{{ product.image.url }}" , width="300" , height="400">
-    <p>{{ product.name }}</p>
-    <p>{{ product.price }}</p>
+                <div class="s-produto__carrossel-img">
+                    <img
+                        src="{{ product.image.url }}"
+                        alt="Imagem Carrossel 1"
+                    />
+                </div>
 
-    {% for color in colors %}
-        <a href="{% url 'product_description' product.id color.id %}">
-            <i class="fa-solid fa-circle" style="color: {{color.color_code}}; "></i>
-            {{ color.name }}
-        </a>
-    {% endfor %}
+                <div class="s-produto__carrossel-img" style="overflow: hidden;">
+                    <img
+                        src="{{ product.image.url }}"
+                        alt="Imagem Carrossel 2"
+                        style="transform: scale(1.6);"
+                    />
+                </div>
+                
+            </div>
 
-    <p>Color: {{selected_color.name}}</p>
-    
-    {% if sizes %}
-        <form method="post" action="{% url 'add_to_cart' product.id %}">
-            {% csrf_token %}
+            <div class="s-produto__carrossel-botoes">
+                <div
+                class="s-produto__carrossel-botao s-produto__carrossel-botao--selecionado"
+                ></div>
+                <div class="s-produto__carrossel-botao"></div>
+                <div class="s-produto__carrossel-botao"></div>
+                <div class="s-produto__carrossel-botao"></div>
+                <div class="s-produto__carrossel-botao"></div>
+            </div>
+        </div>
 
-            <p>Chose your size: </p>
+        <div class="s-produto__informacoes">
+            <div class="s-produto__breadcrumbs">
+                <span><a href="{% url 'store' %}">Home</a></span>
+                <span><a href="{% url 'store' %}{{ product.category.slug }}">{{product.category.name}}</a></span>
+                <span><a href="{% url 'store' %}{{product.categorytype.slug}}-{{product.type.slug}}">{{product.categorytype.name}}</a></span>
+                <span>
+                <p>{{ product.name }}</p>
+                </span>
+            </div>
 
-            {% for size in sizes %}
-                <input type="radio" name="size" value="{{ size }}">
-                <label for="{{ size }}">{{ size }}</label> 
+            <div class="s-produto__infos">
+                <h1 class="s-produto__titulo">{{ product.name }}</h1>
+
+                <p class="s-produto__preco">R$ {{ product.price }}</p>
+
+                <div class="s-produto__cor">
+                    <p class="s-produto__cor-nome">Color: <span>{{selected_color.name}}</span></p>
+                    <div class="s-produto__cores">
+                        {% for color in colors %}
+                            <a
+                            href="{% url 'product_description' product.id color.id %}"
+                            class="s-produto__cores-item"
+                            style="background-color: {{color.color_code}}"
+                            ></a>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                {% if in_stock %}
+                    {% if sizes %}
+                        <form method="post" action="{% url 'add_to_cart' product.id %}">
+                            {% csrf_token %}
+                            <div class="s-produto__tamanho">
+
+                                <div class="s-produto__tamanhos">
+                                    {% for size in sizes %}
+                                        <div class="menu__tamanho">    
+                                            <div class="s-produto__tamanhos-item">{{ size }}</div>
+                                            <input class="menu__checkbox" type="radio" name="size" value="{{ size }}">
+                                        </div>
+                                    {% endfor %}
+                                </div>
+
+                            </div>
+
+                            <input type="hidden" name= "color" value="{{ selected_color.id }}" >
+                            <button type="submit" class="s-produto__adicicionar">Add to Chart</button>
+
+                        </form>   
+                    {% endif %}
+
+                {% else %}
+                    <h3>Item Out of Order! - Sorry!</h3>
+                {% endif %}
+
+            </div>
+
+            <div class="s-produto__descricao">
+                <p class="s-produto__descricao-titulo">Product Description</p>
+                <div class="s-produto__descricao-textos">
+                <p>
+                    Básicos indispensáveis! A camiseta de algodão cropped é perfeita
+                    para usar com calças e saias de cintura alta.
+                </p>
+                <p>
+                    COMPOSIÇÃO <br />
+                    96% Viscose 4% Elastano
+                </p>
+                <p>
+                    Product Code <br />
+                    Ref: <span>{{ product.id }}</span>
+                </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    {% if similar_items %}
+    <section class="similares">
+        <h2 class="similares__titulo">
+            Did you like this product? Check out similar items.
+        </h2>
+
+        <div class="similares__container">
+            {% for similar in similar_items %}
+                <a href="{% url 'product_description' similar.id %}" class="produto">
+                    <div class="produto__imagem">
+                        <img src="{{ similar.image.url }}" alt="Imagem do Produto"/>
+                    </div>
+
+                    <div class="produto__textos">
+                        <p class="produto__titulo">{{ similar.name }}</p>
+                        <div class="produto__preco">
+                            <p class="produto__avista">R$ {{ similar.price }}</p>
+                        </div>
+                    </div>
+                </a>
             {% endfor %}
-            
-            <input type="hidden" name= "color" value="{{ selected_color.id }}" >
-            <button type="submit">Add to Chart</button>
-        </form>
+        </div>
+    </section>
     {% endif %}
-
-
-{% else %}
-    <p>Produto Indisponivel</p>
-
-{% endif %}
+</main>
 
 {% endblock %}
